# password-manager

./: README.md  pyproject.toml
password_manager/: cli.py  secure_storage.py
password_manager/crypto/: __init__.py  core.py  key.py
password_manager/storage/: __init__.py  in_memory_storage.py  json_file_storage.py  sqlite_storage.py  utils.py
password_manager/storage/ini_file_storage/: __init__.py  ini_file_storage.py  ini_maker.py  ini_parser.py
tests/: test_crypto_core.py  test_crypto_keys.py  test_ini_maker.py  test_ini_parser.py  test_secure_storage.py  test_storage_utils.py  test_storages.py
